distance on mianActivity work