@@ -1,11 +1,9 @@
 package fsv.a5us.touristsimple;
 
 import android.Manifest;
-import android.content.Context;
 import android.content.Intent;
 import android.content.pm.PackageManager;
 import android.location.Location;
-import android.location.LocationManager;
 import android.net.ConnectivityManager;
 import android.net.NetworkInfo;
 import android.os.AsyncTask;
@@ -24,65 +22,72 @@ import android.widget.AdapterView;
 import android.widget.ListView;
 import android.widget.ProgressBar;
 import android.widget.Toast;
-import android.test.mock.MockPackageManager;
+
 import com.contentful.java.cda.CDAArray;
 import com.contentful.java.cda.CDAClient;
 import com.contentful.java.cda.CDAEntry;
 import com.contentful.java.cda.CDAResource;
 
-import java.text.DecimalFormat;
+import com.google.android.gms.common.ConnectionResult;
+import com.google.android.gms.common.api.GoogleApiClient;
+import com.google.android.gms.location.FusedLocationProviderApi;
+import com.google.android.gms.location.LocationRequest;
+import com.google.android.gms.location.LocationServices;
+import com.google.android.gms.location.LocationListener;
+import com.google.android.gms.location.internal.FusedLocationProviderResult;
+
+import java.math.BigDecimal;
 import java.util.ArrayList;
 
-public class MainActivity extends AppCompatActivity {
+public class MainActivity extends AppCompatActivity implements GoogleApiClient.ConnectionCallbacks, GoogleApiClient.OnConnectionFailedListener, LocationListener {
+
+    private GoogleApiClient mGoogleApiClient;
+    private LocationRequest locationRequest;
+    private FusedLocationProviderApi locationProviderApi = LocationServices.FusedLocationApi;
+    private Double mLatitude;
+    private Double mLongitude;
+    private Location mLastLocation;
 
     private ArrayList<Attraction> attractions;
     private ListView listView;
     private ProgressBar mProgressBar;
     private GlobalClass global;
-    private static final int REQUEST_CODE_PERMISSION = 2;
-    String mPermission = Manifest.permission.ACCESS_FINE_LOCATION;
-
-    // GPSTracker class
-    GPSTracker gps;
-
 
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
+
         setContentView(R.layout.activity_main);
         getWindow().setFlags(WindowManager.LayoutParams.FLAG_FULLSCREEN,
                 WindowManager.LayoutParams.FLAG_FULLSCREEN);
-
         if (Build.VERSION.SDK_INT > 9) {
             StrictMode.ThreadPolicy policy =
                     new StrictMode.ThreadPolicy.Builder().permitAll().build();
             StrictMode.setThreadPolicy(policy);
         }
 
-        try {
-            if (ActivityCompat.checkSelfPermission(this, mPermission)
-                    != MockPackageManager.PERMISSION_GRANTED) {
-
-                ActivityCompat.requestPermissions(this, new String[]{mPermission},
-                        REQUEST_CODE_PERMISSION);
-
-                // If any permission above not allowed by user, this condition will
-                // execute every time, else your else part will work
-            }
-        } catch (Exception e) {
-            e.printStackTrace();
+        if (mGoogleApiClient == null) {
+            mGoogleApiClient = new GoogleApiClient.Builder(this)
+                    .addConnectionCallbacks(this)
+                    .addOnConnectionFailedListener(this)
+                    .addApi(LocationServices.API)
+                    .build();
         }
+        locationRequest = new LocationRequest();
+        locationRequest.setInterval(2 * 1000); // 2 secs
+        locationRequest.setFastestInterval(1000);
+        locationRequest.setPriority(LocationRequest.PRIORITY_HIGH_ACCURACY);
 
         global = (GlobalClass) getApplicationContext();
         mProgressBar = (ProgressBar) findViewById(R.id.progressBar1);
         listView = (ListView) findViewById(R.id.listViewAttractions);
         attractions = global.getAttractions();
+
         if (attractions.size() < 1) {
             LoadAttractions();
             global.setAttractions(attractions);
         } else {
-
             CustomListAdapter adapter = new CustomListAdapter(getApplicationContext(), R.layout.custom_list_layout, attractions);
             listView.setAdapter(adapter);
         }
@@ -97,7 +102,6 @@ public class MainActivity extends AppCompatActivity {
                 finish();
             }
         });
-
     }
 
     @Override
@@ -109,7 +113,6 @@ public class MainActivity extends AppCompatActivity {
 
     @Override
     public boolean onOptionsItemSelected(MenuItem item) {
-
         switch (item.getItemId()) {
             case R.id.itemRefresh:
                 global.setAttractions(new ArrayList<Attraction>());
@@ -119,41 +122,78 @@ public class MainActivity extends AppCompatActivity {
                 LoadAttractions();
                 break;
             case R.id.itemGps:
-                gps = new GPSTracker(MainActivity.this);
-
-                // check if GPS enabled
-                if(gps.canGetLocation()){
-
-                    double latitude = gps.getLatitude();
-                    double longitude = gps.getLongitude();
-
-                    // \n is for new line
-                    Toast.makeText(getApplicationContext(), "Your Location is - \nLat: "
-                            + latitude + "\nLong: " + longitude, Toast.LENGTH_LONG).show();
-                }else{
-                    // can't get location
-                    // GPS or Network is not enabled
-                    // Ask user to enable GPS/network in settings
-                    gps.showSettingsAlert();
-                }
                 break;
         }
         return super.onOptionsItemSelected(item);
     }
 
-    public void LoadAttractions(){
-        if( isOnline() ){
-            LoadCMS task = new LoadCMS();
-            task.execute();
-        } else {
-            Toast.makeText(MainActivity.this.getApplicationContext(), "Aby pobrać atrakcje, musisz połączyć się z siecią.", Toast.LENGTH_SHORT).show();
+    @Override
+    protected void onStart() {
+        super.onStart();
+        mGoogleApiClient.connect();
+        Log.d("onStart ", mGoogleApiClient.toString());
+    }
+
+    @Override
+    protected void onResume() {
+        super.onResume();
+        if (mGoogleApiClient.isConnected()) {
+            requestLocationUpdates();
         }
     }
 
-    public boolean isOnline(){
-        ConnectivityManager connectivityManager = (ConnectivityManager) getSystemService(this.CONNECTIVITY_SERVICE);
-        NetworkInfo networkInfo = connectivityManager.getActiveNetworkInfo();
-        return (networkInfo != null && networkInfo.isConnected());
+    @Override
+    protected void onPause() {
+        super.onPause();
+        //LocationServices.FusedLocationApi.removeLocationUpdates(mGoogleApiClient, this);
+    }
+
+    @Override
+    protected void onStop() {
+        super.onStop();
+        mGoogleApiClient.disconnect();
+    }
+
+    @Override
+    public void onConnected(Bundle bundle) {
+        requestLocationUpdates();
+        Log.d("On connected ", "OK");
+    }
+
+    private void requestLocationUpdates() {
+        Log.i("requestLocationUpdates" , "start");
+        if (ActivityCompat.checkSelfPermission(this, Manifest.permission.ACCESS_FINE_LOCATION) != PackageManager.PERMISSION_GRANTED && ActivityCompat.checkSelfPermission(this, Manifest.permission.ACCESS_COARSE_LOCATION) != PackageManager.PERMISSION_GRANTED) {
+            return;
+        }
+        LocationServices.FusedLocationApi.requestLocationUpdates(mGoogleApiClient, locationRequest, this);
+        mLastLocation = LocationServices.FusedLocationApi.getLastLocation(mGoogleApiClient);
+    }
+
+    @Override
+    public void onConnectionSuspended(int i) {
+
+    }
+
+    @Override
+    public void onConnectionFailed(ConnectionResult connectionResult) {
+
+    }
+
+    @Override
+    public void onLocationChanged(Location location) {
+        Log.i("onLocationChanged" , "start");
+        mLatitude = location.getLatitude();
+        mLongitude = location.getLongitude();
+        for(Attraction a: attractions){
+            float [] dist = new float[1];
+            Log.d("Moja pozycja: ", mLatitude + " " + mLongitude);
+            Log.d("Odcz pozycja: ", a.getLatitude() + " " + a.getLongitude());
+            Location.distanceBetween(location.getLatitude(), location.getLongitude(), a.getLatitude(), a.getLongitude(), dist);
+            a.setDistacne(round(dist[0]/1000, 1));
+        }
+        CustomListAdapter adapter = new CustomListAdapter(getApplicationContext(), R.layout.custom_list_layout, attractions);
+        listView.setAdapter(adapter);
+        Log.d("requestLocation", "Updated");
     }
 
     class LoadCMS extends AsyncTask<Void, Void, Void>{
@@ -172,56 +212,16 @@ public class MainActivity extends AppCompatActivity {
                     .build();
 
             CDAArray result = client.fetch(CDAEntry.class).all();
-            Location myLocation = new Location("myl");
-            gps = new GPSTracker(MainActivity.this);
-/*            float lon1 = (float)gps.getLongitude();
-            float lat1 = (float) gps.getLatitude();*/
-            myLocation.setLatitude(gps.getLatitude());
-            myLocation.setLongitude(gps.getLongitude());
-            myLocation.setAltitude(0);
-            myLocation.setBearing(0);
-            myLocation.setExtras(null);
-            myLocation.setAccuracy(0);
-            myLocation.setTime(0);
-            myLocation.setAccuracy(0);
-            myLocation.setElapsedRealtimeNanos(0);
-            myLocation.setSpeed(0);
-            myLocation.setProvider(null);
 
             for (CDAResource a : result.items()) {
                 CDAEntry attraction = client.fetch(CDAEntry.class).one(a.id());
-
+                Log.d("Field: ", attraction.getField("coordinate").toString());
                 String loc = attraction.getField("coordinate").toString();
+                Log.d("String loc: ", loc);
                 float lon2 = Float.parseFloat(loc.substring(loc.indexOf("lon=")+4, loc.indexOf(",")));
                 float lat2 = Float.parseFloat(loc.substring(loc.indexOf("lat=")+4, loc.indexOf("}")));
-                Location atrLocation = new Location("atrloc");
-                atrLocation.setLongitude(lon2);
-                atrLocation.setLatitude(lat2);
-                atrLocation.setAltitude(0);
-                atrLocation.setBearing(0);
-                atrLocation.setExtras(null);
-                atrLocation.setAccuracy(0);
-                atrLocation.setTime(0);
-                atrLocation.setAccuracy(0);
-                atrLocation.setElapsedRealtimeNanos(0);
-                atrLocation.setSpeed(0);
-                atrLocation.setProvider(null);
                 float dist;
-                if(myLocation!=null){
-                    dist = myLocation.distanceTo(atrLocation);
-                    Log.d("Distance: ", String.valueOf(dist));
-                    dist = dist / 1000000;
-/*                    DecimalFormat df = new DecimalFormat("0.00");
-                    dist  = new Float(df.format(dist)).floatValue();*/
-                } else{
-                    dist = Float.valueOf("9.9");
-                }
-
-/*                int R = 6371; // km
-                float x = (float) ((lon2 - lon1) * Math.cos((lat1 + lat2) / 2));
-                float y = (lat2 - lat1);
-                float dist = (float)(Math.sqrt(x * x + y * y) * R);*/
-
+                dist = Float.valueOf("9");
 
                 attractions.add(new Attraction(
                         attraction.getField("attractionType").toString(),
@@ -247,13 +247,24 @@ public class MainActivity extends AppCompatActivity {
         }
     }
 
-    @Override
-    protected void onPause() {
-        super.onPause();
+    public void LoadAttractions(){
+        if( isOnline() ){
+            LoadCMS task = new LoadCMS();
+            task.execute();
+        } else {
+            Toast.makeText(MainActivity.this.getApplicationContext(), "Aby pobrać atrakcje, musisz połączyć się z siecią.", Toast.LENGTH_SHORT).show();
+        }
     }
 
-    @Override
-    protected void onResume() {
-        super.onResume();
+    public boolean isOnline(){
+        ConnectivityManager connectivityManager = (ConnectivityManager) getSystemService(this.CONNECTIVITY_SERVICE);
+        NetworkInfo networkInfo = connectivityManager.getActiveNetworkInfo();
+        return (networkInfo != null && networkInfo.isConnected());
+    }
+
+    public static float round(float d, int decimalPlace) {
+        BigDecimal bd = new BigDecimal(Float.toString(d));
+        bd = bd.setScale(decimalPlace, BigDecimal.ROUND_HALF_UP);
+        return bd.floatValue();
     }
 }
